--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.4",
     "multer": "^1.4.5-lts.2",
+    "nodemailer": "^6.10.1",
     "nodemon": "^3.1.7"
   }
 }
