--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Revise_React_App",
-  "name": "Revise Mobile React App",
+  "short_name": "Revise",
+  "name": "Revise",
   "icons": [
     {
       "src": "favicon.ico",
